ci: implemented internationalization along with husky

--- a/src/app/[lang]/globals.css
+++ b/src/app/[lang]/globals.css
@@ -14,6 +14,7 @@
     --popover-foreground: 20 14.3% 4.1%;
 
     --primary: 204 82% 17%;
+    --primary-hover: 204 60% 28%;
     --primary-foreground: 60 9.1% 97.8%;
 
     --secondary: 60 4.8% 95.9%;
